Properly implement Login and Register views
