# malphas/src/api/models/index.ts
@@ -1,2 +1,2 @@
-export * from './ListAllProjects200ResponseInner';
-export * from './LoginRequest';
+export * from './CredentialsDto';
+export * from './Project';
